# machine-learning

rnn/: README.md  pyproject.toml
rnn/dataset/: MRTSSM45321USN.csv
rnn/src/: retailSales.py
